Quick fix for the about continers on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -478,6 +478,9 @@ footer p {
   .about-containers {
     margin-top: 0;
   }
+  .details-container {
+    min-width: 25vw;
+  }
 }
 
 @media screen and (max-width: 600px) {
